added some fun text animations for the chat notifier