@@ -93,8 +93,9 @@ public class ChatNotificator {
     private static void displayAndPlaySound(String display) {
         activeText = display;
         activeColor = WynnExtrasConfig.INSTANCE.textColor.getRGB() | 0xFF000000;
-        startTimeMs = System.currentTimeMillis();
-        expireTimeMs = System.currentTimeMillis() + WynnExtrasConfig.INSTANCE.textDurationInMs;
+        long now = System.currentTimeMillis();
+        startTimeMs = now;
+        expireTimeMs = now + WynnExtrasConfig.INSTANCE.textDurationInMs;
         MinecraftUtils.playSoundAmbient(SoundEvent.of(Identifier.of(WynnExtrasConfig.INSTANCE.notificationSound.getSoundId())), WynnExtrasConfig.INSTANCE.soundVolume / 100, WynnExtrasConfig.INSTANCE.soundPitch / 100);
     }
 
@@ -111,20 +112,16 @@ public class ChatNotificator {
         if (mc.options.hudHidden) return;
 
         WynnExtrasConfig c = WynnExtrasConfig.INSTANCE;
-        long fadeInMs = c.notifierFadeInMs;
-        long fadeOutMs = c.notifierFadeOutMs;
+        long entranceDurationMs = c.notifierFadeInMs;
+        long exitDurationMs = c.notifierFadeOutMs;
         long elapsed = now - startTimeMs;
         long remaining = expireTimeMs - now;
-
-        float alpha;
-        if (elapsed < fadeInMs) {
-            alpha = fadeInMs > 0 ? (float) elapsed / fadeInMs : 1f;
-        } else if (remaining < fadeOutMs) {
-            alpha = fadeOutMs > 0 ? (float) remaining / fadeOutMs : 1f;
-        } else {
-            alpha = 1.0f;
-        }
-        alpha = Math.max(0f, Math.min(1f, alpha));
+        float entranceProgress = entranceDurationMs > 0
+                ? Math.clamp((float) elapsed / entranceDurationMs, 0f, 1f)
+                : 1f;
+        float exitProgress = exitDurationMs > 0
+                ? Math.clamp(1f - (float) remaining / exitDurationMs, 0f, 1f)
+                : 0f;
 
         float scale = c.notifierScale;
         int screenW = mc.getWindow().getScaledWidth();
@@ -149,11 +146,190 @@ public class ChatNotificator {
             textOffsetX = -tw / 2;
         }
 
+        float alpha = 1f;
+        float offsetX = 0f;
+        float offsetY = 0f;
+        float animationScaleX = 1f;
+        float animationScaleY = 1f;
+        float rotation = 0f;
+        float clipLeft = cx + textOffsetX * scale - 2f;
+        float clipRight = cx + (textOffsetX + tw) * scale + 2f;
+        float clipTop = cy - th / 2f * scale - 2f;
+        float clipBottom = cy + th / 2f * scale + 2f;
+        boolean clip = false;
+        float easedProgress = easeOutCubic(entranceProgress);
+        WynnExtrasConfig.NotifierAnimation animation = c.notifierAnimation == null
+                ? WynnExtrasConfig.NotifierAnimation.FADE
+                : c.notifierAnimation;
+        WynnExtrasConfig.NotifierAnimationDirection entranceDirection = c.notifierEntranceDirection == null
+                ? WynnExtrasConfig.NotifierAnimationDirection.BOTTOM
+                : c.notifierEntranceDirection;
+
+        switch (animation) {
+            case APPEAR -> {
+            }
+            case FADE -> alpha = entranceProgress;
+            case FLY_IN -> {
+                switch (entranceDirection) {
+                    case LEFT -> offsetX = (-cx - tw * scale) * (1f - easedProgress);
+                    case RIGHT -> offsetX = (screenW - cx + tw * scale) * (1f - easedProgress);
+                    case TOP -> offsetY = (-cy - th * scale) * (1f - easedProgress);
+                    case BOTTOM -> offsetY = (screenH - cy + th * scale) * (1f - easedProgress);
+                }
+            }
+            case PEEK_IN -> {
+                switch (entranceDirection) {
+                    case LEFT -> offsetX = -(clipRight - clipLeft) * (1f - easedProgress);
+                    case RIGHT -> offsetX = (clipRight - clipLeft) * (1f - easedProgress);
+                    case TOP -> offsetY = -(clipBottom - clipTop) * (1f - easedProgress);
+                    case BOTTOM -> offsetY = (clipBottom - clipTop) * (1f - easedProgress);
+                }
+                clip = entranceProgress < 1f;
+            }
+            case WIPE -> {
+                switch (entranceDirection) {
+                    case LEFT -> clipRight = clipLeft + (clipRight - clipLeft) * entranceProgress;
+                    case RIGHT -> clipLeft = clipRight - (clipRight - clipLeft) * entranceProgress;
+                    case TOP -> clipBottom = clipTop + (clipBottom - clipTop) * entranceProgress;
+                    case BOTTOM -> clipTop = clipBottom - (clipBottom - clipTop) * entranceProgress;
+                }
+                clip = entranceProgress < 1f;
+            }
+            case ZOOM -> {
+                alpha = entranceProgress;
+                animationScaleX = 0.25f + 0.75f * easedProgress;
+                animationScaleY = animationScaleX;
+            }
+            case PINWHEEL -> {
+                alpha = entranceProgress;
+                animationScaleX = 0.1f + 0.9f * easedProgress;
+                animationScaleY = animationScaleX;
+                rotation = -(1f - easedProgress) * (float) (Math.PI * 2);
+            }
+            case BOUNCE -> {
+                alpha = Math.clamp(entranceProgress * 3f, 0f, 1f);
+                offsetX = -Math.min(80f, screenW * 0.15f) * (1f - easedProgress);
+                offsetY = (-cy - th * scale) * (1f - easeOutBounce(entranceProgress));
+            }
+            case EXPAND -> {
+                alpha = entranceProgress;
+                animationScaleX = easedProgress;
+            }
+            case FADED_SWIVEL -> {
+                float swivelAngle = (1f - easedProgress) * (float) (Math.PI * 1.5);
+                alpha = entranceProgress;
+                animationScaleX = Math.abs((float) Math.cos(swivelAngle));
+                rotation = (float) Math.sin(swivelAngle) * 0.15f;
+            }
+        }
+
+        float easedExitProgress = easeInCubic(exitProgress);
+        WynnExtrasConfig.NotifierExitAnimation exitAnimation = c.notifierExitAnimation == null
+                ? WynnExtrasConfig.NotifierExitAnimation.FADE
+                : c.notifierExitAnimation;
+        WynnExtrasConfig.NotifierAnimationDirection exitDirection = c.notifierExitDirection == null
+                ? WynnExtrasConfig.NotifierAnimationDirection.BOTTOM
+                : c.notifierExitDirection;
+
+        switch (exitAnimation) {
+            case DISAPPEAR -> {
+            }
+            case FADE -> alpha = Math.min(alpha, 1f - exitProgress);
+            case FLY_OUT -> {
+                switch (exitDirection) {
+                    case LEFT -> offsetX += (-cx - tw * scale) * easedExitProgress;
+                    case RIGHT -> offsetX += (screenW - cx + tw * scale) * easedExitProgress;
+                    case TOP -> offsetY += (-cy - th * scale) * easedExitProgress;
+                    case BOTTOM -> offsetY += (screenH - cy + th * scale) * easedExitProgress;
+                }
+            }
+            case PEEK_OUT -> {
+                switch (exitDirection) {
+                    case LEFT -> offsetX -= (clipRight - clipLeft) * easedExitProgress;
+                    case RIGHT -> offsetX += (clipRight - clipLeft) * easedExitProgress;
+                    case TOP -> offsetY -= (clipBottom - clipTop) * easedExitProgress;
+                    case BOTTOM -> offsetY += (clipBottom - clipTop) * easedExitProgress;
+                }
+                clip = clip || exitProgress > 0f;
+            }
+            case WIPE -> {
+                switch (exitDirection) {
+                    case LEFT -> clipRight -= (clipRight - clipLeft) * exitProgress;
+                    case RIGHT -> clipLeft += (clipRight - clipLeft) * exitProgress;
+                    case TOP -> clipBottom -= (clipBottom - clipTop) * exitProgress;
+                    case BOTTOM -> clipTop += (clipBottom - clipTop) * exitProgress;
+                }
+                clip = clip || exitProgress > 0f;
+            }
+            case ZOOM -> {
+                alpha = Math.min(alpha, 1f - exitProgress);
+                animationScaleX *= 1f - 0.75f * easedExitProgress;
+                animationScaleY *= 1f - 0.75f * easedExitProgress;
+            }
+            case PINWHEEL -> {
+                alpha = Math.min(alpha, 1f - exitProgress);
+                animationScaleX *= 1f - 0.9f * easedExitProgress;
+                animationScaleY *= 1f - 0.9f * easedExitProgress;
+                rotation += easedExitProgress * (float) (Math.PI * 2);
+            }
+            case BOUNCE -> {
+                offsetX += Math.min(80f, screenW * 0.15f) * easedExitProgress;
+                offsetY += (screenH - cy + th * scale) * easeInBounce(exitProgress);
+            }
+            case CONTRACT -> {
+                alpha = Math.min(alpha, 1f - exitProgress);
+                animationScaleX *= 1f - easedExitProgress;
+            }
+            case FADED_SWIVEL -> {
+                float swivelAngle = easedExitProgress * (float) (Math.PI * 1.5);
+                alpha = Math.min(alpha, 1f - exitProgress);
+                animationScaleX *= Math.abs((float) Math.cos(swivelAngle));
+                rotation += (float) Math.sin(swivelAngle) * 0.15f;
+            }
+        }
+
+        if (clip) {
+            ctx.enableScissor((int) Math.floor(clipLeft), (int) Math.floor(clipTop),
+                    (int) Math.ceil(clipRight), (int) Math.ceil(clipBottom));
+        }
+        int centeredTextX = -tw / 2;
+        float textCenterOffsetX = (textOffsetX - centeredTextX) * scale;
         ctx.getMatrices().pushMatrix();
-        ctx.getMatrices().translate(cx, cy);
-        ctx.getMatrices().scale(scale, scale);
-        ctx.drawText(mc.textRenderer, activeText, textOffsetX, -th / 2, CustomColor.fromInt(activeColor).withAlpha(alpha).asInt(), true);
+        ctx.getMatrices().translate(cx + textCenterOffsetX + offsetX, cy + offsetY);
+        ctx.getMatrices().rotate(rotation);
+        ctx.getMatrices().scale(scale * animationScaleX, scale * animationScaleY);
+        ctx.drawText(mc.textRenderer, activeText, centeredTextX, -th / 2, CustomColor.fromInt(activeColor).withAlpha(alpha).asInt(), true);
         ctx.getMatrices().popMatrix();
+        if (clip) ctx.disableScissor();
+    }
+
+    private static float easeOutCubic(float progress) {
+        float remaining = 1f - progress;
+        return 1f - remaining * remaining * remaining;
+    }
+
+    private static float easeInCubic(float progress) {
+        return progress * progress * progress;
+    }
+
+    private static float easeOutBounce(float progress) {
+        if (progress < 1f / 2.75f) {
+            return 7.5625f * progress * progress;
+        }
+        if (progress < 2f / 2.75f) {
+            progress -= 1.5f / 2.75f;
+            return 7.5625f * progress * progress + 0.75f;
+        }
+        if (progress < 2.5f / 2.75f) {
+            progress -= 2.25f / 2.75f;
+            return 7.5625f * progress * progress + 0.9375f;
+        }
+        progress -= 2.625f / 2.75f;
+        return 7.5625f * progress * progress + 0.984375f;
+    }
+
+    private static float easeInBounce(float progress) {
+        return 1f - easeOutBounce(1f - progress);
     }
 
     private static void handleBombshareSuggestion(Text message) {
